Lecture 6: финальная версия с DTO и Swagger

--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<dependency>git checkout feature/lecture6
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
